# rustler

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  BACKEND_REFERENCE.md  CHANGELOG.md  COMPONENT_USAGE.md  DATA_FLOW.md  FILES_CREATED.md  FRONTEND_README.md  FRONTEND_SETUP_SUMMARY.md  FRONTEND_STRUCTURE.md  LICENSE  PROJECT_STRUCTURE.md  PROJECT_TREE.txt  QUICKSTART.md  README.md  components.json  index.html  overlay.html  package.json  renovate.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.husky/: commit-msg  pre-commit
scripts/: capture-demo.sh  record-demo.sh
src/: App.tsx  index.css  main.tsx  overlay.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.serena/: project.yml
src-tauri/.serena/memories/: code_style.md  project_overview.md  suggested_commands.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: Rustler-hidden.desktop  com.rustler.desktop.desktop
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: mod.rs  recorder.rs
src-tauri/src/clipboard/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/commands/: clipboard.rs  history.rs  hotkey.rs  mod.rs  models.rs  overlay.rs  recording.rs  settings.rs  transcription.rs
src-tauri/src/hotkey/: mod.rs  wayland.rs
src-tauri/src/models/: downloader.rs  mod.rs
src-tauri/src/whisper/: cache.rs  context.rs  mod.rs  transcriber.rs
src/components/: FloatingRecordButton.tsx  GpuToggle.tsx  HotkeyConfig.tsx  ModelSelector.tsx  OverlayButton.tsx  PillOverlay.tsx  SettingsPanel.tsx  (+6 more)
(+37 files in other folders)
