[package]
name = "rustler"
version = "0.1.0"
description = "Speech-to-text desktop app using Whisper"
authors = ["Rustler Team"]
license = "MIT"
repository = "https://github.com/rustler/rustler-app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rustler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-process = "2"
whisper-rs = { version = "0.15", features = ["cuda"] }
cpal = "0.15"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
parking_lot = "0.12"
log = "0.4"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.9"
ashpd = { version = "0.12", features = ["tokio"] }
gtk = "0.18"
gdk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_DataExchange", "Win32_Foundation"] }
